--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,31 @@
 			<version>${wicket.version}</version>
 		</dependency>
 
+
+		<dependency>
+		    <groupId>org.eclipse.jetty</groupId>
+		    <artifactId>jetty-webapp</artifactId>
+		    <version>11.0.15</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.eclipse.jetty</groupId>
+		    <artifactId>jetty-annotations</artifactId>
+		    <version>11.0.15</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-api</artifactId>
+    		<version>2.0.7</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-simple</artifactId>
+    		<version>2.0.7</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
