--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
  		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
-			<param-value>gluser1357.server.WicketApplication</param-value>
+			<param-value>gluser1357.server.wicket.WicketApplication</param-value>
  		</init-param>
  	</filter>
  	<filter-mapping>
