--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app
-        xmlns = "https://jakarta.ee/xml/ns/jakartaee"
-        xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation = "https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-        version = "5.0"
-        metadata-complete = "false">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+
+	<display-name>jerseyissues</display-name>
 
 	<filter>
     	<filter-name>FirstFilter</filter-name>
-    	<filter-class>gluser1357.server.FirstFilter</filter-class>
+    	<filter-class>gluser1357.FirstFilter</filter-class>
   	</filter>
   
  	<filter-mapping>
 	    <filter-name>FirstFilter</filter-name>
 	    <url-pattern>/*</url-pattern>
  	</filter-mapping>
+ 	
+	<!--
+		There are three means to configure Wickets configuration mode and they 
+		are tested in the order given.
+		
+		1) A system property: -Dwicket.configuration 
+		2) servlet specific <init-param> 
+		3) context specific <context-param>
 
-  	<filter>
-		<filter-name>Wicket</filter-name>
- 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+		The value might be either "development" (reloading when templates change) or 
+		"deployment". If no configuration is found, "development" is the default. -->
+
+	<filter>
+		<filter-name>wicket.jerseyissues</filter-name>
+		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
-			<param-value>gluser1357.server.wicket.WicketApplication</param-value>
- 		</init-param>
- 	</filter>
- 	<filter-mapping>
-		<filter-name>Wicket</filter-name>
+			<param-value>gluser1357.WicketApplication</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>wicket.jerseyissues</filter-name>
 		<url-pattern>/*</url-pattern>
- 	</filter-mapping>	 
- 	
+	</filter-mapping>
 </web-app>
