--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,38 @@
 		    <version>${jersey.version}</version>  
         </dependency>
 
+
+
+		<dependency>
+		    <groupId>org.eclipse.jetty</groupId>
+		    <artifactId>jetty-server</artifactId>
+		    <version>11.0.15</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.eclipse.jetty</groupId>
+		    <artifactId>jetty-annotations</artifactId>
+		    <version>11.0.15</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.eclipse.jetty</groupId>
+		    <artifactId>jetty-jmx</artifactId>
+		    <version>11.0.15</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-api</artifactId>
+    		<version>2.0.7</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-simple</artifactId>
+    		<version>2.0.7</version>
+		</dependency>
+
 	</dependencies>
 
 	 <build> 
