--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<!--  WICKET DEPENDENCIES -->
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
-			<artifactId>wicket-commons-fileupload</artifactId>
+			<artifactId>wicket-util</artifactId>
 			<version>${wicket.version}</version>
 		</dependency>
 
